@@ -15,7 +15,7 @@ import java.io.InputStream;
 import java.net.URL;
 import java.net.Socket;
 import java.net.URLConnection;
-//import java.net.URI;
+import java.net.URI;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.InputMismatchException;
@@ -179,9 +179,9 @@ public final class In {
 
             // or URL from web
             if (url == null) {
-                //URI uri = Paths.get(name).toUri();
-                //url = uri.toURL();
-                url = new URL(name);
+                URI uri = Paths.get(name).toUri();
+                url = uri.toURL();
+                //url = new URL(name);
             }
 
             URLConnection site = url.openConnection();
